  retry limit for CloudFront internal service errors.
- Improved support for accessing S3 using DevPay credentials with a new
  credentials class for defining and storing these credentials: 
  AWSDevPayCredentials
- Added a class (AWSDevPayProduct) to represent a DevPay product, and to load 
  information about pre-defined products from the properties file 
  devpay_products.properties.

  * REST Implementation

- Added support for proxy authentication settings in jets3t.properties:
  "proxy-user", "proxy-password", and "proxy-domain"
- The service's HTTP proxy settings can be updated an reapplied on-demand using
  a range of #initHttpProxy methods.
- The HttpConnectionManager and HttpClient objects used by the REST service can
  now be reinitialised on-demand using the #initHttpConnection method.
- The underlying HttpClient and HttpConnectionManager objects can be accessed 
  to provide greater control and flexibility after a service is created.
- The automatic time adjustment performed in response to RequestTimeTooSkewed
  errors will now work through proxies.

KUDOS TO:

David Kavanagh for sample code that helped improve HTTP proxy support and 
configurability.

Nikolas Coukouma of Zmanda Inc. for patches to significantly improve support
for Amazon DevPay in the library and Cockpit applications.

-------------
Version 0.6.1
-------------

COCKPIT
- Added support for copying or moving objects within and between buckets.
- Added dialog to assist in moving/renaming multiple objects within a bucket.
- Added support for updating objects with new metadata values.
- Fixed issue where downloading items to a directory containing many files and 
  directories (eg 250K+) would cause Cockpit to fail with OutOfMemory errors.
- Added a Confirm Password field to the encryption settings, to help prevent 
  problems where a password is mistyped.
- Cockpit can now generate valid signed GET URLs for DevPay S3 accounts.
    

SYNCHRONIZE